feat: policy screen

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
@@ -282,3 +282,27 @@
 .cloud-img {
   height: 1.5em;
 }
+
+.type-count-container{
+  padding: 0px 24px;
+}
+
+.type-count-content-wrapper{
+    padding: 12px 0px 12px 24px;
+    background: #FFFFFF;
+    border-right: 1px solid var(--border-100);
+}
+
+.type-count-content-wrapper .type-name{
+    color: var(--text-medium-emphasis);
+    padding-bottom: 4px;
+    font: var(--text-body-2);
+}
+
+.type-count-content-wrapper .type-count{
+    font: var(--text-headline-5);
+}
+
+.type-count-content-container{
+    flex:1
+}
