--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -1,6 +1,6 @@
 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
   <ng-container *ngFor="let column of displayedColumns;" [matColumnDef]="column">
-    <th [style.flex]="columnWidths[column]" mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> {{ column }} </th>
+    <th [style.flex]="columnWidths[column]" mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> {{ columnNamesMap[column] }} </th>
     <td [style.flex]="columnWidths[column]" mat-cell *matCellDef="let element"> {{ element[column] }} </td>
   </ng-container>
 
