feat(): Added collapsed side-navbar feature

--- a/webapp/src/app/post-login-app/common/asset-switcher/asset-switcher.component.css
+++ b/webapp/src/app/post-login-app/common/asset-switcher/asset-switcher.component.css
@@ -11,6 +11,10 @@
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
+ 
+.asset-group-selection{
+  width: 100%;
+}
 
 .recently-viewed-wrap {
   border: 1px solid #7a7a7a;
