--- a/webapp/src/app/post-login-app/default-asset-group/default-asset-group.component.html
+++ b/webapp/src/app/post-login-app/default-asset-group/default-asset-group.component.html
@@ -14,21 +14,18 @@
 
 <div class="defualt-asset-wrapper">
   <div class="defualt-asset-image-wrapper">
-    <img
-      src="/assets/icons/{{ provider[0] }}-color.svg"
-      *ngIf="provider.length == 1; else defaultImage"
-    />
+    <img src="/assets/icons/{{ provider[0] }}-color.svg" *ngIf="provider.length == 1; else defaultImage" />
     <ng-template #defaultImage>
       <img src="/assets/icons/multi-cloud.svg" />
     </ng-template>
   </div>
-  <div class="defualt-asset-content-wrapper">
+  <div class="defualt-asset-content-wrapper" [class.isCollapsed]="!isExpanded">
     <div class="defualt-asset-title">
       {{ assetGroupDisplayName }}
     </div>
     <div class="defualt-asset-count">Assets: {{ assetCount }}</div>
   </div>
-  <div class="default-asset-icons-wrapper">
+  <div class="default-asset-icons-wrapper" [class.isCollapsed]="!isExpanded">
     <img src="/assets/icons/chevron-expand.svg" alt="" />
   </div>
 </div>
