--- a/webapp/src/app/post-login-app/post-login-app.component.html
+++ b/webapp/src/app/post-login-app/post-login-app.component.html
@@ -12,52 +12,34 @@
  * limitations under the License.
  -->
 
-<div
-  class="pacman-logged-in-section"
-  [class.is-offine]="isOffline"
-  [ngStyle]="
+<div class="pacman-logged-in-section" [class.is-offine]="isOffline" [ngStyle]="
     theme !== undefined && { 'background-image': 'url(' + theme.bg + ')' }
-  "
->
+  ">
   <section class="post-login-body" [@mainRouterTransition]="getState(o)">
     <app-header></app-header>
-    <button class="sidenav-expander flex flex-center" mat-button (click)="sidenavExpanderClicked()" [ngStyle]="{ 'left.px':sidenavExpanderLeft, 'transform': rotationVar}"><img src="/assets/icons/Path.svg" /></button>
+    <button class="sidenav-expander flex flex-center" mat-button (click)="sidenavExpanderClicked()"
+      [ngStyle]="{ 'left.px':sidenavExpanderLeft, 'transform': rotationVar}"><img
+        src="/assets/icons/Path.svg" /></button>
     <mat-sidenav-container autosize [hasBackdrop]="false">
-        <mat-sidenav
-        #sidenav
-        [class.expanded-sidenav]="isExpanded || isShowing"
-        [class.collapsed-sidenav]="!isExpanded && !isShowing"
-        [mode]="mode"
-        opened="true"
-        (mouseenter)="mouseenter()"
-        (mouseleave)="mouseleave()">
-          <div
-            class="contextual-menu-container"
-          >
-            <app-contextual-menu [haveAdminPageAccess]="haveAdminPageAccess"></app-contextual-menu>
-          </div>
-        </mat-sidenav>
+      <mat-sidenav #sidenav [class.expanded-sidenav]="isExpanded" [class.collapsed-sidenav]="!isExpanded" [mode]="mode"
+        opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
+        <div class="contextual-menu-container">
+          <app-contextual-menu [haveAdminPageAccess]="haveAdminPageAccess" [expanded]="isExpanded">
+          </app-contextual-menu>
+        </div>
+      </mat-sidenav>
       <mat-sidenav-content>
         <!-- <div class="contextual-container"> -->
-          <!-- <app-header></app-header> -->
-          <div class="contextual-content-container">
-            <router-outlet
-              #o="outlet"
-              (deactivate)="onDeactivate($event)"
-            ></router-outlet>
-          </div>
+        <!-- <app-header></app-header> -->
+        <div class="contextual-content-container">
+          <router-outlet #o="outlet" (deactivate)="onDeactivate($event)"></router-outlet>
+        </div>
         <!-- </div> -->
       </mat-sidenav-content>
     </mat-sidenav-container>
   </section>
-  <div
-    class="next-level-routing-container"
-    [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }"
-  >
-    <a
-      class="nextLevel-close layer-delete-title show-cross"
-      (click)="navigateBackToRootLevel()"
-    >
+  <div class="next-level-routing-container" [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }">
+    <a class="nextLevel-close layer-delete-title show-cross" (click)="navigateBackToRootLevel()">
       <img class="layer-delete-icon" src="../../assets/icons/x-icon.svg" />
     </a>
     <div class="opaque-layer">
@@ -76,27 +58,7 @@
 <div [class.hide]="!showPacLoader.length" class="pacman-anim">
   <img src="../assets/icons/Download-active.svg" />
 </div>
-<img
-  src="/assets/images/bg/background.png"
-  width="0px"
-  height="0px"
-  class="hide"
-/>
-<img
-  src="/assets/images/bg/bg-domain3.png"
-  width="0px"
-  height="0px"
-  class="hide"
-/>
-<img
-  src="/assets/images/bg/bg-domain2.png"
-  width="0px"
-  height="0px"
-  class="hide"
-/>
-<img
-  src="/assets/images/bg/bg-domain1.png"
-  width="0px"
-  height="0px"
-  class="hide"
-/>
+<img src="/assets/images/bg/background.png" width="0px" height="0px" class="hide" />
+<img src="/assets/images/bg/bg-domain3.png" width="0px" height="0px" class="hide" />
+<img src="/assets/images/bg/bg-domain2.png" width="0px" height="0px" class="hide" />
+<img src="/assets/images/bg/bg-domain1.png" width="0px" height="0px" class="hide" />
