style/fix: styling changes

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
@@ -301,6 +301,7 @@
 
 .type-count-content-wrapper .type-count{
     font: var(--text-headline-5);
+    color: var(--text-high-emphasis);
 }
 
 .type-count-content-container{
