--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -11,6 +11,13 @@ tr {
   display: flex;
 }
 
+tr.mat-row, tr.mat-footer-row {
+  height: 62px;
+  padding: 12px 0px;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+}
+
 th.mat-header-cell, td.mat-cell, td.mat-footer-cell{
   border:none;
 }
@@ -18,4 +25,14 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell{
 tr.mat-header-row{
   height: 52px;
   padding: 16px 0px;
+  font: var(--text-body-2);
+  color: var(--text-low-emphasis);
+}
+
+thead {
+  height: 52px;
+}
+
+th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
+  padding: 0px 12px 0px 24px;
 }
