--- a/webapp/src/app/shared/table-wrapper/table-wrapper.component.html
+++ b/webapp/src/app/shared/table-wrapper/table-wrapper.component.html
@@ -8,6 +8,7 @@
                 <div class="search-in-columns" matSuffix>
                     <mat-form-field>
                         <mat-select [formControl]="searchInColumns" multiple>
+                            <mat-option class="disabled-option" disabled="true" value="disabled">SEARCH IN</mat-option>
                             <mat-option *ngFor="let column of whiteListColumns" [value]="column">
                             {{columnNamesMap[column]}}
                             </mat-option>
@@ -20,7 +21,8 @@
             <div class="add-remove-columns-wrapper">
                 <mat-form-field>
                     <mat-select #select multiple>
-                        <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="0">Select All</mat-option>
+                        <mat-option class="disabled-option" disabled="true" value="disabled">Show/hide columns</mat-option>
+                        <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="selectAll">Select All</mat-option>
                         <mat-option (click)="optionClick()" *ngFor="let column of displayedColumns" [value]="column">
                         {{columnNamesMap[column]}}
                         </mat-option>
