feat: added error state

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -26,7 +26,7 @@
                 <app-card [card]="cards[0]"></app-card>
             </mat-grid-tile>
             <mat-grid-tile>
-                <app-card [card]="cards[1]" [isPolicyDataLoaded]="isPolicyDataLoaded" [policyData]="policyData"></app-card>
+                <app-card [card]="cards[1]" [policyDataError]="policyDataError" [policyData]="policyData"></app-card>
             </mat-grid-tile>
         </mat-grid-list>
     </div>
