--- a/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
@@ -4,13 +4,13 @@
   </mat-card-header>
   <mat-card-content>
     <div class="chart" *ngIf="card.id == 1">
-      <div [class.loader]="!isComplianceDataLoaded"></div>
-      <app-empty-state *ngIf="isComplianceDataLoaded && complianceData.length == 0" message="There is nothing to show !"></app-empty-state>
+      <div [class.loader]="complianceData.length==0 && complianceDataError==''"></div>
+      <app-error-message *ngIf="complianceDataError" [selectedValue]="complianceDataError"></app-error-message>
       <app-progress-bar-chart *ngIf="complianceData.length > 0" [bars]="complianceData"></app-progress-bar-chart>
     </div>
     <div class="chart" *ngIf="card.id == 2">
-      <div [class.loader]="!isPolicyDataLoaded"></div>
-      <app-empty-state *ngIf="isPolicyDataLoaded && !policyData" message="There is nothing to show !"></app-empty-state>
+      <div [class.loader]="!policyData && policyDataError==''"></div>
+      <app-error-message *ngIf="policyDataError" [selectedValue]="policyDataError"></app-error-message>
       <div class="graph-chart-cont relative" id="dashboardDoughnut">
         <app-doughnut-chart *ngIf="policyData" [chartContId]="'dashboardDoughnut'" [graphData]="policyData"
           [graphWidth]="widgetWidth" [flexTrue]="true" [graphHeight]="widgetHeight" [MainTextcolor]="MainTextcolor"
@@ -20,8 +20,8 @@
       </div>
     </div>
     <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll">
-      <div [class.loader]="!isAssetsCountDataLoaded"></div>
-      <app-empty-state *ngIf="isAssetsCountDataLoaded && assetsCountData.length==0" message="There is nothing to show !"></app-empty-state>
+      <div [class.loader]="assetsCountData.length==0 && assetsCountDataError==''"></div>
+      <app-error-message *ngIf="assetsCountDataError" [selectedValue]="assetsCountDataError"></app-error-message>
       <app-horizontal-bar-chart *ngIf="assetsCountData.length > 0" [data]="assetsCountData"></app-horizontal-bar-chart>
     </div>
   </mat-card-content>
