feat: added sorting functionality to table

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
@@ -20,10 +20,7 @@
 }
 
 .policy-knowledgebase-content {
-  margin: 0 1.8em 1.8em;
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  height: 100%;
+  padding: 24px;
 }
 
 .pk-header {
