chore: added loader to policy screen

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
@@ -18,6 +18,7 @@
   padding: 28px;
   width: 100%;
   min-width: 550px;
+  background-color: var(--background-grey);
 }
 .container-1{
   height: 108px;
